# Earthlings-On-Mars-Foundation

./: .flake8  .gitignore  .jscpd.json  .luacheckrc  .mega-linter.yml  .yamllint.yaml  Dockerfile  LICENSE.txt  README.md  flake.nix  lua.yml  pyproject.toml  renovate.json  ruff.toml  selene.toml  shell.nix
.github/workflows/: docker-image.yml  mega-linter.yml
data/2026/NPCs/captain/: npc.yaml
data/2026/NPCs/computer/: npc.yaml
data/2026/NPCs/engineering/: npc.yaml
data/2026/NPCs/quartermaster/: npc.yaml
data/2026/locations/: stageA.yaml  stageB.yaml
docs/: Lua.md  Writing Missions.md  index.md
src/console/: __about__.py  __init__.py  __main__.py
src/console/cli/: __init__.py
src/earthlingsOnMarsFoundation/: manage.py
src/earthlingsOnMarsFoundation/calls/: admin.py  jambon.py  models.py  urls.py  views.py
src/earthlingsOnMarsFoundation/calls/migrations/: 0001_initial.py  0002_alter_mission_call_another_and_more.py
src/earthlingsOnMarsFoundation/earthlingsOnMarsFoundation/: asgi.py  settings.py  urls.py  wsgi.py
src/earthlingsOnMarsFoundation/templates/admin/: base_site.html
src/earthlings_on_mars_foundation/: __about__.py  __init__.py  manage.py
src/earthlings_on_mars_foundation/calls/: __init__.py  admin.py  apps.py  consumers.py  consumers_asterisk.py  consumers_jambonz.py  jambon.py  lua.py  middleware.py  models.py  tests.py  tts.py  urls.py  views.py
src/earthlings_on_mars_foundation/calls/migrations/: 0001_initial.py  0002_alter_mission_call_another_and_more.py  0003_rename_npc_calllog_npc_mission_dependents_and_more.py  0004_rename_missionprerequisites_missionprerequisite_and_more.py  0005_alter_calllog_npc_alter_calllog_recruit.py  0006_calllog_location_mission_incorrect_text.py  0007_alter_recruitnpc_contacted.py  0008_alter_mission_call_back_from_and_more.py  0009_mission_lua_alter_mission_type.py  0010_calllog_completed_calllog_success_and_more.py  0011_recruitmission_state.py  (+4 more)
src/earthlings_on_mars_foundation/earthlings_on_mars_foundation/: __init__.py  asgi.py  routing.py  settings.py  urls.py  widgets.py  wsgi.py
tests/: __init__.py
(+11 files in other folders)
