[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthlings-on-mars-foundation"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Foxocube", email = "git@foxocube.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "django",
  "requests",
  "channels",
  "daphne",
  "lupa",
  "django-editor-widgets"
]

[project.urls]
Documentation = "https://github.com/Foxocube/earthlings-on-mars-foundation#readme"
Issues = "https://github.com/Foxocube/earthlings-on-mars-foundation/issues"
Source = "https://github.com/Foxocube/earthlings-on-mars-foundation"

[project.scripts]
console = "console.cli:earthlings_on_mars_foundation"
manager = "earthlings_on_mars_foundation.manage:main"

[tool.hatch.version]
path = "src/earthlings_on_mars_foundation/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/earthlings_on_mars_foundation tests}"

[tool.coverage.run]
source_pkgs = ["earthlings_on_mars_foundation", "tests"]
branch = true
parallel = true
omit = [
  "src/earthlings_on_mars_foundation/__about__.py",
]

[tool.coverage.paths]
earthlings_on_mars_foundation = ["src/earthlings_on_mars_foundation", "*/earthlings-on-mars-foundation/src/earthlings_on_mars_foundation"]
tests = ["tests", "*/earthlings-on-mars-foundation/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
